--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -16,16 +16,7 @@
 	
 </head>
 <body>
-	<header>
-		<nav>
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Evento</a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn" ><i class="material-icons left">add_circle_outline</i>Lista de evento</a></li>
-		      </ul>
-		    </div>
-		  </nav>
-	</header>
+	<th:block th:include="navbar/menu"></th:block>
 	
 	
 	<div th:each="evento : ${evento}" class="container detalhesEvento">
@@ -68,11 +59,14 @@
 				</td>
 		</tbody>
 	</table>
-	
-	
 
-	
+
+
+
 	<!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+	<script type="text/javascript" src="materialize/js/materialize.js"></script>
+	<script type="text/javascript" src="js/utilitarios.js"></script>
 </body>
 </html>
