--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -18,16 +18,7 @@
 
 <body>
 
-    <header>
-		<nav>
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Cadastro de Eventos</a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn" ><i class="material-icons left">add_circle_outline</i>Lista de evento</a></li>
-		      </ul>
-		    </div>
-		  </nav>
-	</header>
+    <th:block th:include="navbar/menu"></th:block>
 
     <th:block th:include="mensagens/mensagemValidacao"></th:block>
     <div class="container formEvento">
@@ -52,9 +43,12 @@
             <button type="submit" class="waves-effect waves-light btn" >Salvar</button>
         </form>
     </div>
-	
-	
-	<!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="materializejs/materialize.min.js"></script>
+
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.js"></script>
+    <script type="text/javascript" src="js/utilitarios.js"></script>
 </body>
 </html>
