--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,18 +15,8 @@
 	
 </head>
 <body>
+	<th:block th:include="navbar/menu"></th:block>
 
-    <header>
-        <nav>
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Lista de Eventos</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/eventos" class="waves-effect waves-light btn" ><i class="material-icons left">add_circle_outline</i>Lista de evento</a></li>
-                <li><a href="/cadastrarEvento" class="waves-effect waves-light btn" ><i class="material-icons left">add_circle_outline</i>Cadastrar Eventos</a></li>
-                </ul>
-            </div>
-        </nav>
-	</header>
 	<table class="container">
 		<thead>
 			<tr>
@@ -59,7 +49,10 @@
 	
 	
 	<!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="materializejs/materialize.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+	<script type="text/javascript" src="materialize/js/materialize.js"></script>
+	<script type="text/javascript" src="js/utilitarios.js"></script>
 </body>
 
 </html>
